[package]
name = "weapon_and_rune"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = { git = "https://github.com/dtolnay/anyhow" }
bevy = { git = "https://github.com/bevyengine/bevy" }
rune = { git = "https://github.com/rune-rs/rune" }
rune-modules = { git = "https://github.com/rune-rs/rune" }
